--- a/TIM/config/classif_config.json
+++ b/TIM/config/classif_config.json
@@ -33,3 +33,48 @@
     "save_steps": 10000,
     "total_steps": 1000000
 }
+
+{
+    "vocab_file":"",
+    "data_file":"",
+    "max_len":512,
+    "vocab_size":"",
+    "n_segments":2,
+
+    "d_model":512,
+    "d_k":512,
+    "d_v":512,
+    "num_heads":8,
+    "num_encoder_layers":6,
+    "dim_feedforward":2048,
+    "dropout_rate":0.1,
+
+    "n_s":2,
+    "H":8,
+    "H_c":8,
+    "tim_layers_pos":"",
+
+    "model_file" : "",
+    "save_dir":"/content/bert_classifiction",
+    "log_dir":"/content/bert_classifiction/runs",
+
+    "pretrain":"False",
+    "data_parallel":"False",
+    "seed": 3431,
+    "batch_size": 32,
+    "n_epochs": 2,
+    
+    "max_pred":20,
+    "mask_prob":0.15,
+    "mode" : "train",
+    "pretrain_file":"",
+    "task" : "",
+    
+    
+    "lr": 2e-5,
+    "warmup": 0.1,
+    "save_steps": 100,
+    "total_steps": 345,
+
+    "config_file":"",
+}
