--- a/TIM/config/classif_config.json
+++ b/TIM/config/classif_config.json
@@ -1,42 +1,6 @@
 {
     "vocab_file":"",
     "data_file":"",
-    "model_file" : "",
-    "save_dir":"/content/classif",
-    "log_dir":"/content/classif/runs",
-    "data_parallel":"False",
-    "max_len":512,
-    "max_pred":20,
-    "mask_prob":0.15,
-    "d_model":512,
-    "d_k":512,
-    "d_v":512,
-    "num_heads":8,
-    "num_encoder_layers":6,
-    "dim_feedforward":2048,
-    "dropout_rate":0.1,
-    "vocab_size":"",
-    "n_segments":2,
-    "n_s":2,
-    "H":8,
-    "H_c":8,
-    "tim_layers_pos":"",
-    "config_file":"",
-    "task" : "",
-    "pretrain_file":"",
-    "mode" : "train",
-    "seed": 3431,
-    "batch_size": 32,
-    "lr": 1e-4,
-    "n_epochs": 2,
-    "warmup": 0.1,
-    "save_steps": 10000,
-    "total_steps": 1000000
-}
-
-{
-    "vocab_file":"",
-    "data_file":"",
     "max_len":512,
     "vocab_size":"",
     "n_segments":2,
@@ -76,5 +40,5 @@
     "save_steps": 100,
     "total_steps": 345,
 
-    "config_file":"",
+    "config_file":""
 }
