--- a/TIM/config/classif_config.json
+++ b/TIM/config/classif_config.json
@@ -1,8 +1,9 @@
 {
     "vocab_file":"",
-    "data_file":"",
-    "max_len":512,
-    "vocab_size":"",
+    "train_data_file":"",
+    "val_data_file":"",
+    "max_len":100,
+    "max_vocab":"-1",
     "n_segments":2,
 
     "d_model":512,
@@ -18,10 +19,6 @@
     "H_c":8,
     "tim_layers_pos":"",
 
-    "model_file" : "",
-    "save_dir":"/content/bert_classifiction",
-    "log_dir":"/content/bert_classifiction/runs",
-
     "pretrain":"False",
     "data_parallel":"False",
     "seed": 3431,
@@ -30,15 +27,28 @@
     
     "max_pred":20,
     "mask_prob":0.15,
-    "mode" : "train",
     "pretrain_file":"",
     "task" : "",
     
     
     "lr": 2e-5,
     "warmup": 0.1,
-    "save_steps": 100,
-    "total_steps": 345,
 
-    "config_file":""
+    "config_file":"",
+
+    "stopping_criterion":"val_acc,10", 
+    "validation_metrics":"val_acc", 
+    "train_n_samples":"-1",
+    "val_n_samples":"-1",
+    "eval_only":"False",
+
+    "shuffle":"False",
+
+    "exp_name":"classification", 
+    "exp_id":"demo", 
+    "dump_path":"/content/bert_classification",
+    "reload_transformer":"/content/bert_pretrain/pretrain/demo/best_val_nsp_acc.pt",
+    "reload_checkpoint":"",
+    
+    "reload_model":""
 }
