--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,7 @@
 # tools, data, and dumped models
 # /tools
-/data/*
-data/*
-/XLM_original/data
-/XLM_our/data
-/XLM_original/dumped
-/XLM_our/dumped
-/dumped
-/XLM_original/apex
-/XLM_our/apex
-/apex
+
+/XLM/data
 
 # Created by https://www.gitignore.io/api/python
 # Edit at https://www.gitignore.io/?templates=python
